--- a/lambda/package.json
+++ b/lambda/package.json
@@ -13,6 +13,7 @@
     "ask-sdk-local-debug": "^1.1.0",
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
+    "dotenv": "^17.2.3",
     "node-fetch": "^3.3.2"
   }
 }
