--- a/lambda/package.json
+++ b/lambda/package.json
@@ -10,6 +10,7 @@
   "license": "Apache License",
   "dependencies": {
     "ask-sdk-core": "^2.7.0",
+    "ask-sdk-dynamodb-persistence-adapter": "^2.10.0",
     "ask-sdk-local-debug": "^1.1.0",
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
