--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,7 +4,7 @@
   "description": "alexa utility for quickly building skills",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand"
   },
   "author": "Amazon Alexa",
   "license": "Apache License",
@@ -15,6 +15,10 @@
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
     "dotenv": "^17.2.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "luxon": "^3.4.0"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0"
   }
 }
