feat: add conversation history clearing to `clearCartSession`; introduce robust live and integration tests for OpenAI and Ollama adapters; update dependencies for LangChain integration

--- a/lambda/.env
+++ b/lambda/.env
@@ -1,1 +1,6 @@
 BACKEND_API_BASE=http://localhost:3000/api
+DEBUG_AI=true
+AI_ADAPTER=openai
+OPENAI_SSM_PARAM_NAME=arn:aws:ssm:ap-northeast-1:569544363325:parameter/openai-api-key
+OPENAI_MODEL=gpt-5-nano
+OLLAMA_MODEL=gpt-oss:20b
