--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,6 +9,7 @@
   "author": "Amazon Alexa",
   "license": "Apache License",
   "dependencies": {
+    "@langchain/openai": "^1.1.3",
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-dynamodb-persistence-adapter": "^2.10.0",
     "ask-sdk-local-debug": "^1.1.0",
